codecrafters submit [skip ci]

--- a/codecrafters-shell.csproj
+++ b/codecrafters-shell.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ReadLine" Version="2.0.1" />
+  </ItemGroup>
+
 </Project>
